<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/nav_top_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_main_page" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/nav_profile_page" />

        <item
            android:id="@+id/nav_buy_puntos"
            android:icon="@drawable/ic_action_cart"
            android:title="@string/nav_buy_points" />
    </group>

    <group android:id="@+id/nav_bottom_group"
        android:checkableBehavior="single">

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share_app" />

        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_feedback"/>

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_48dp"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_log_out"
            android:title="Log out"/>
    </group>
</menu>
