<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#4FC3F7">

                <TextView
                    android:id="@+id/cuatriTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q1"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#4DD0E1">

                <TextView
                    android:id="@+id/cuatriTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q2"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#81C784">

                <TextView
                    android:id="@+id/cuatriTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q3"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#AED581">

                <TextView
                    android:id="@+id/cuatriTitle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q4"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#DCE775">

                <TextView
                    android:id="@+id/cuatriTitle5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q5"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatri6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#FFF176">

                <TextView
                    android:id="@+id/cuatriTitle6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/q6"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatriOpta"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#FFD54F">

                <TextView
                    android:id="@+id/cuatriTitleOpta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/optativas"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cuatriTFG"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/card_margin_horizontal"
                android:layout_marginRight="@dimen/card_margin_horizontal"
                android:onClick="cuatriSearch"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#FFB74D">

                <TextView
                    android:id="@+id/cuatriTitleTFG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/tfg"
                    android:textSize="34sp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        
    </ScrollView>


</LinearLayout>