<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardBio"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#4FC3F7"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/bioeng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleBio" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardEnerg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#4DD0E1"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/enereng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleEnerg"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardElectri"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#81C784"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/electrieng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleElectri"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardElectro"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#AED581"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/electroeng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleElectro"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardMec"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#DCE775"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/meceng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleMec"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/especCardQui"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                card_view:cardCornerRadius="0dp"
                card_view:cardBackgroundColor="#FFF176"
                android:onClick="especSearch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/quieng"
                    android:textSize="20sp"
                    android:id="@+id/especTitleQui"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>